--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<meta charset='utf-8'><title>Laura's JS life</title>
+		<meta charset='utf-8'><title>My first Project with HTML</title>
 	</head>
 	<body>
 		<h1>Links</h1>
@@ -19,7 +19,8 @@
 
 			</ul>
 		</p>
-		<p> These links mustn't be used lmao, it's just for trying out things :3
+		<p> I am acutally leaning HTML since 30th of November, so if you wanna help me DM me on Instagram :3
+		</p>
 		<script>
 
 
