--- a/index.html
+++ b/index.html
@@ -21,6 +21,37 @@
 		</p>
 		<p> I am acutally leaning HTML since 30th of November, so if you wanna help me DM me on Instagram :3
 		</p>
+	
+		<p> My plan's acutally:
+			<ul>
+				<li>
+					I want to access a teaching with Matura (it's the Austrian word for A-Levels)
+				</li>
+				<li>
+					I will learn to programm and make my own website
+				</li>
+				<li>
+					I will go to pride every year with my gay friends and my girlfriend
+				</li>
+				<li>
+					I will marry my girlfriend (I am pan) <3
+				</li>
+				<li>
+					I will get a great job in IT
+				</li>
+				<li>
+					I might get kids with my future wife and live in a house with them
+				</li>
+				<li>
+					I might be a grandma *-*
+				</li>
+				<li> 
+					I will live happily till I die
+				</li>
+			</ul>
+		</p>
+
+
 		<script>
 
 
@@ -29,6 +60,5 @@
 
 
 
-		</script>
-	</body>
+</script>	</body>
 </html>
