--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 		<p>
 			<ul>
 				<li>
-					<a href='https://instagram.com/_darkwhiteangel_'>Instagram</a>
+					<a href='https://instagram.com/_guardianofthefire_'>Instagram</a>
 				</li>
 				<li>
 					<a href="https://darkwhiteangellife.blogspot.com">Blog</a>
 				</li>
 				<li>
-					<a href="https://wattpad.com/_AngelOfFire_">Wattpad</a>
+					<a href="https://https://lucx1.github.io">Lucia's Site</a>
 		
 				</li>
 
@@ -34,7 +34,7 @@
 					I will go to pride every year with my gay friends and my girlfriend
 				</li>
 				<li>
-					I will marry my girlfriend (I am pan) <3
+					I will marry my girlfriend <3
 				</li>
 				<li>
 					I will get a great job in IT
